tests/check/illegal_for.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_foreach(f32 [3, ?, 18] a, s16 [?, 4] b) {
  c = 3;
  foreach c {}
  foreach a {};
  foreach f {};
  ituple<2> it = {3, 5};
  foreach it {}
  with idx = {x, y} in b.span {
    foreach c {}
    foreach x {}
    foreach x, y {}
    foreach y, x {}
    foreach idx {}
    foreach idx, x, y {}
  }
  parallel p by 6 {
    foreach p {}
  }
  
}

// CHECK: expect a bounded type for iteration variable 'c' but got 's32'.
// CHECK: expect a bounded type for iteration variable 'a' but got 'f32 mdspan<3> []'.
// CHECK: symbol `f' is used before declaration.
// CHECK: expect a bounded type for iteration variable 'f' but got 'invalid'.
// CHECK: expect a bounded type for iteration variable 'it' but got 'ituple<2>'.
// CHECK: expect a bounded type for iteration variable 'c' but got 's32'.
// CHECK: error: expect the bounded variable 'p' to be declared by 'within' block instead of 'parallel-by' block.
// CHECK:       foreach p {}
// CHECK:               ^
// CHECK: Totally 7 errors have been detected.
